--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "food-delivery",
+  "name": "expo-tailwind-starter",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
